--- a/Specta Spec.xctemplate/TemplateInfo.plist
+++ b/Specta Spec.xctemplate/TemplateInfo.plist
@@ -30,7 +30,7 @@
 			<key>Identifier</key>
 			<string>testedClass</string>
 			<key>Name</key>
-			<string>Spec for</string>
+			<string>.m file name that you want to test</string>
 			<key>Required</key>
 			<true/>
 			<key>NotPersisted</key>
@@ -40,7 +40,7 @@
 		</dict>
 		<dict>
 			<key>Default</key>
-			<string>___VARIABLE_testedClass___Spec</string>
+			<string>___VARIABLE_testedClass___Tests</string>
 			<key>Identifier</key>
 			<string>productName</string>
 			<key>Type</key>
